[gd_scene load_steps=10 format=2]

[ext_resource path="res://Dash.gd" type="Script" id=1]
[ext_resource path="res://assets/particles/dust.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.376404, 0 ), 0.0, 0.00722402, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 0.7
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 3.0
scale_random = 0.25
color_ramp = SubResource( 4 )
anim_speed_curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 18.0
flag_disable_z = true
spread = 40.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 4.0
scale_random = 0.25
color_ramp = SubResource( 4 )
anim_speed_curve = SubResource( 6 )

[node name="Dash" type="Node2D"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="DustTrail" type="Particles2D" parent="."]
material = SubResource( 2 )
z_index = -1
emitting = false
lifetime = 1.2
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="DustBurst" type="Particles2D" parent="."]
material = SubResource( 2 )
scale = Vector2( 1.34, 1 )
z_index = -1
emitting = false
amount = 14
lifetime = 1.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
